fix spacing

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -22,8 +22,8 @@ body.loaded {
 @media (max-width: 767px) {
     /* Mobile styles */
     body {
-        margin-left: 10%;
-        margin-right: 10%;
+        margin-left: 5%;
+        margin-right: 5%;
     }
 }
 
